# primesieve

./: CMakeLists.txt
examples/c/: CMakeLists.txt
examples/cpp/: CMakeLists.txt
