enable_language(C)
file(GLOB files "*.c")

foreach(file ${files})
    get_filename_component(binary_name ${file} NAME_WE)
    add_executable(${binary_name}_c ${file})
    message(STATUS "Adding executable ${binary_name}_c")
    target_link_libraries(${binary_name}_c primesieve::primesieve)
    if(WITH_MSVC_CRT_STATIC)
        set_target_properties(${binary_name}_c PROPERTIES MSVC_RUNTIME_LIBRARY "MultiThreaded")
    endif()
    set_target_properties(${binary_name}_c PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
endforeach()
