file(GLOB files "*.cpp")
foreach(file ${files})
    get_filename_component(binary_name ${file} NAME_WE)
    add_executable(${binary_name} ${file})
    message(STATUS "Adding executable ${binary_name}")
    target_link_libraries(${binary_name} primesieve::primesieve)
    if(WITH_MSVC_CRT_STATIC)
        set_target_properties(${binary_name} PROPERTIES MSVC_RUNTIME_LIBRARY "MultiThreaded")
    endif()
    set_target_properties(${binary_name} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
endforeach()
