file(GLOB files "*.cpp")
foreach(file ${files})
    get_filename_component(binary_name ${file} NAME_WE)
    add_executable(${binary_name} ${file})
    if(STATIC_LINKING)
        target_link_libraries(${binary_name} libprimesieve-static)
    else()
        target_link_libraries(${binary_name} libprimesieve)
    endif()
    set_target_properties(${binary_name} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
    if(WITH_MSVC_CRT_STATIC)
        set_target_properties(${binary_name} PROPERTIES MSVC_RUNTIME_LIBRARY "MultiThreaded")
    endif()
endforeach()
